Don't remove the Konsole widget from the layout when it has been destroyed already. This fixes a crash.

BUG: 263405